name:                65h
version:             0.0.0.99
synopsis:            6502 assembler
description:         This package provides a 6502 assembler and a disassembler geared towards NES development, as well as tools to help managing graphics and producing ROM images.

homepage:            http://www.github.com/slaphappybee/65h
license:             BSD3
license-file:        LICENSE
author:              Anna Bellec
maintainer:          32549757+slaphappybee@users.noreply.github.com
category:            Development

build-type:          Simple
cabal-version:       >=1.10

executable 65a
  main-is:             65a.hs
  other-modules:       INESFormat, Assembler, Parser, Spec
  build-depends:       base >= 4.10 && < 4.11, parsec >= 3.1 && < 3.2, indents >= 0.4, bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010

executable 65d
  main-is:             65d.hs
  other-modules:       INESFormat, Spec
  build-depends:       base >= 4.10 && < 4.11, parsec >= 3.1 && < 3.2, indents >= 0.4, bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010

executable 65e
  main-is:             65e.hs
  other-modules:       Encoder
  build-depends:       base >= 4.10 && < 4.11, JuicyPixels >= 3.2, filepath >= 1.4, bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010
